modified changes in AboutUs

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -13,7 +13,7 @@
 	<h1>О нас</h1>
 	
 	<p>Здесь будет информация о нас, но пока нет фантазии.</p>
-	<p>Ololo</p>
+	<p>Ololoooo</p>
 
 </main>
 <footer>
